Fix modal overflow

--- a/src/components/modal/Modal.pcss
+++ b/src/components/modal/Modal.pcss
@@ -4,7 +4,8 @@
 
 .modal {
   position: fixed;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   width: 100%;
   height: 100%;
   top: 0;
